--- a/README.adoc
+++ b/README.adoc
@@ -1,26 +1,90 @@
 = “项目”需求
+
 本文档用于收集该玩具项目的需求。
 本“项目”没有命名，以下皆以中文全角双引号的 `“项目”` 来指代。
 
+本文档使用 `AsciiDoc` 格式编写，与 `Markdown` 有点类似但不相同。
+语法可参考 https://asciidoctor.cn/docs/asciidoc-syntax-quick-reference/ 。
+
+之所以选取 `AsciiDoc` ，是因为这种格式能力更强，
+包括 `include` 、各种导出功能等，更适合多人协作和应对文档的复杂性。
+
 == 修改记录
 
-|修改人|修改时间|修改内容|
-|---|---|---|
-|abomb4|2019-12-30|初始创建|
+[options="header"]
+|===========================
+|版本|修改人|修改时间|修改内容
+||abomb4|2019-12-30|初始创建
+|===========================
 
 == 综述
 本节描述本项目的背景，本文档的目的。
 
 === 背景
 该项目的根本目的是为了学习技术，给自己找事干，还有其他目的：
-- 若所有参与人都可以自由使用本项目代码
+
+- 积累技术储备
 - 尝试各种新技术
+- 若所有参与人都可以自由使用本项目代码
+
+在 http://asciidoctor.org[issue#1] 里面收集了很多要做的东西，
+它们就是原始需求来源；在本文档中会对其中的需求进行筛选，留下一些要做的，
+并对其进行分析。
+
+当前，本“项目”的目标是实现一套可扩展的业务平台，包含互联网场景下常见的业务。
 
 === 文档目标
-本文档尝试按比较标准的方式来描述需求，要求可以规定需求边界、可以做测试用例依据、可以了解“项目”全貌。
+本文档尝试按比较完善的方式来描述需求，要求可以规定需求边界、可以做测试用例依据、可以了解“项目”全貌。
+
 文档面向人群是 scalable-t 全部成员，负责人是 abomb4。
 
 == 需求综述
+描述整体需求。
+
+=== 整体功能
+整体上，要做成一套可扩展的 ToC 业务平台。未来实现的业务功能包括但不限于：
+
+- 多渠道信息发布
+- 在线点餐
+- 积分
+- 问卷
+- 商城
+- 物流
+- 仓储
+
+不过本期不做太多的功能，本来就是业余时间。
+
+形成可扩展的功能，第一要务是统一的账户体系。
+
+==== 账户体系
+根据流行的用户方案，该账户体系需要包含的功能有：
+
+- SSO 统一登录
+- 使用开放认证协议，方便外部对接
+- 支持以手机号为主的登录，并支持账号、邮箱、手机验证码、邮箱验证码（优先级低）登录
+- 支持微信授权登录（重要）
+
+需要形成对接文档和 Demo 代码，以便更多应用接入该体系。
+
+还要支持统一登录界面的定制化，包括：
+
+- 统一修改界面样式
+- 根据回调 Host 的不同展示不同风格的登录界面
+
+也要考虑基本的安全方面的问题：
+
+- 回调 URL 必须是经过配置的
+- 用户修改名称的频率需要控制
+
+还要有一个用户档案体系，它提供用户各式各样的资料，以动态表单的形式存在。
+该用户档案的作用是提高各业务系统的业务开通体验，减少用户重复填写资料的烦恼。
+也就是要实现，用户在开通【业务 A】时上传了个人照片并填写了地址，
+在开通【业务 B】时可以直接选用之前上传的照片和选取地址。
+
+用户档案要支持档案历史，就是档案有版本号和当前版本。
+运营方需要查看某用户某项档案的档案历史。
+
+将来若有 ToB SaaS 业务时，到时候再考虑这套用户体系有无可复用性。
 
 == 功能需求
 
