--- a/README.adoc
+++ b/README.adoc
@@ -51,12 +51,25 @@
 - 商城
 - 物流
 - 仓储
+- 贸易
+- 支付
 
 不过本期不做太多的功能，本来就是业余时间，先实现账户体系。
 
 形成可扩展的功能，第一要务是统一的账户体系。
 
 ==== 账户体系
+需要一款即支持个人用户，又支持 SaaS 化企业管理的用户体系，可以参考钉钉的做法。
+
+考虑场景：
+要基于该用户体系开发一套贸易业务，面向企业，支持线上支付的那种。
+在此之前，本平台给企业提供了内部管理和一套 CRM 系统。
+此时共给企业提供了贸易、支付、CRM、企业内部管理功能。
+
+该场景下，员工可以使用这些系统来为企业做业务，如担任财务管理支付信息、
+担任客户代表管理客户信息等。
+员工离职后，若系统上存在聊天系统（要不要带上聊天记录呢？）
+
 根据流行的用户方案，该账户体系需要包含的功能有：
 
 - SSO 统一登录
@@ -84,7 +97,6 @@
 用户档案要支持档案历史，就是档案有版本号和当前版本。
 运营方需要查看某用户某项档案的档案历史。
 
-将来若有 ToB SaaS 业务时，到时候再考虑这套用户体系有无可复用性。
 
 == 功能需求
 
