--- a/README.adoc
+++ b/README.adoc
@@ -39,10 +39,8 @@
 文档面向人群是 scalable-t 全部成员，负责人是 abomb4。
 
 == 需求综述
-描述整体需求。
-
-=== 整体功能
-整体上，要做成一套可扩展的 ToC 业务平台。未来实现的业务功能包括但不限于：
+本项目要做成一套可扩展的同时 To C 和 To B 的业务平台。
+未来实现的业务功能包括但不限于：
 
 - 多渠道信息发布
 - 在线点餐
@@ -54,50 +52,15 @@
 - 贸易
 - 支付
 
-不过本期不做太多的功能，本来就是业余时间，先实现账户体系。
+不过本期不做太多的功能，本来就是业余时间；所以先实现账户体系。
 
 形成可扩展的功能，第一要务是统一的账户体系。
 
-==== 账户体系
-需要一款即支持个人用户，又支持 SaaS 化企业管理的用户体系，可以参考钉钉的做法。
+本次项目对账户体系提出高要求，要支持同时面向 B 和 C 两端用户。
 
-考虑场景：
-要基于该用户体系开发一套贸易业务，面向企业，支持线上支付的那种。
-在此之前，本平台给企业提供了内部管理和一套 CRM 系统。
-此时共给企业提供了贸易、支付、CRM、企业内部管理功能。
+// 分模块介绍需求
+include::account/index.adoc[]
 
-该场景下，员工可以使用这些系统来为企业做业务，如担任财务管理支付信息、
-担任客户代表管理客户信息等。
-员工离职后，若系统上存在聊天系统（要不要带上聊天记录呢？）
-
-根据流行的用户方案，该账户体系需要包含的功能有：
-
-- SSO 统一登录
-- 使用开放认证协议，方便外部对接
-- 支持以手机号为主的登录，并支持账号、邮箱、手机验证码、邮箱验证码（优先级低）登录
-- 支持微信授权登录（重要）
-
-需要形成对接文档和 Demo 代码，以便更多应用接入该体系。
-
-还要支持统一登录界面的定制化，包括：
-
-- 统一修改界面样式
-- 根据回调 Host 的不同展示不同风格的登录界面
-
-也要考虑基本的安全方面的问题：
-
-- 回调 URL 必须是经过配置的
-- 用户修改名称的频率需要控制
-
-还要有一个用户档案体系，它提供用户各式各样的资料，以动态表单的形式存在。
-该用户档案的作用是提高各业务系统的业务开通体验，减少用户重复填写资料的烦恼。
-也就是要实现，用户在开通【业务 A】时上传了个人照片并填写了地址，
-在开通【业务 B】时可以直接选用之前上传的照片和选取地址。
-
-用户档案要支持档案历史，就是档案有版本号和当前版本。
-运营方需要查看某用户某项档案的档案历史。
-
-
-== 功能需求
+== 整体功能需求
 
 == 非功能需求
