--- a/account/index.adoc
+++ b/account/index.adoc
@@ -41,3 +41,10 @@
 
 用户档案要支持档案历史，就是档案有版本号和当前版本。
 运营方需要查看某用户某项档案的档案历史。
+
+=== 分析
+严格来说，这套体系就是 扁平的用户体系 + SaaS 企业内部账户体系 + 身份实体体系揉合在一起的机制。
+
+看钉钉的接口，当 SaaS 卖给企业时，企业对钉钉的个人用户体系是完全无感知的，
+员工什么的都照常添加。
+所以不清楚钉钉账号与企业员工是怎么关联的，搞清楚才可以后续。
